# flujo

./: .coverage  .coverage.Alvaros-MacBook-Air.local.23579.XXSaovUx  .coverage.Alvaros-MacBook-Air.local.23736.XOZGTbux  .coverage.Alvaros-MacBook-Air.local.24425.XCcijVnx  .coverage.Alvaros-MacBook-Air.local.43009.XlNJnXpx  .coverage.Alvaros-MacBook-Air.local.43235.XkDDQOUx  .coverage.Alvaros-MacBook-Air.local.44315.XNdSxbwx  .env  .env.example  .gitignore  .pr_body_aros_phase1.md  .pr_body_aros_phase2.md  .pr_body_fsd033.md  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ALL_LINGER_TESTS_FIXED.md  ALL_REVIEWER_COMMENTS_ADDRESSED_REPORT.md  AWESOME-FLUJO.md  BUFFER_POOLING_BUG_FIX_SUMMARY.md  BUG_ANALYSIS_HITL_SINK_TO.md  BUG_FIXES_IMPLEMENTATION_SUMMARY.md  BUG_REPORT_mypy_hook_signature.md  CACHING_REGRESSION_TESTS_SUMMARY.md  CACHING_SYSTEM_FIX_SUMMARY.md  CHANGELOG.md  CI_TIMEOUT_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE  COMPLETE_FINAL_STATUS.md  COMPLETE_FIX_SUMMARY.md  CONTEXT_HANDLING_ISSUES_SUMMARY.md  CONTEXT_UPDATE_BUG_FIX_SUMMARY.md  CONTRIBUTING.md  COST_TRACKING_IMPROVEMENTS.md  CRITICAL_BUG_FIX_COMPLETE.md  DEPENDENCY_IMPROVEMENTS.md  DEPENDENCY_UPDATE_SUMMARY.md  DEVELOPER_GUIDE.md  DOCUMENTATION_REBUILD_SUMMARY.md  (+195 more)
.github/: PULL_REQUEST_TEMPLATE.md
Kanban/: 1-granular_Agents.md  2-improove_types.md  3-reasoner-agent.md  5-the factory.md  BACKGROUND_TASK_RESUMABILITY.md  architectural_debt.md  ci-recommendations.md  close_gaps.md  debt.md  demo.md  fix_items.md  ideas.md  improvement_plan.md  index.md  not urgent.md  phase3.md  plan.md  policy_frame_migration.md  pruning.md  structure.md  test_planning.md
bug_hunting/: BUG_HUNTING_EXECUTION_PLAN.md  BUG_HUNTING_SESSION_2_EXECUTION_PLAN.md  BUG_HUNTING_SESSION_2_RESULTS.md  BUG_HUNTING_SESSION_2_SUMMARY.md  BUG_HUNTING_SESSION_3_EXECUTION_PLAN.md  BUG_HUNTING_SESSION_3_SUMMARY.md  BUG_HUNTING_STRATEGY.md  BUG_HUNTING_SUMMARY.md  README.md
bug_reports/: COMPLETE_BUG_REPORTS_SUMMARY.md  README.md  TEMPLATE_FALLBACKS_RESOLUTION_COMPLETE.md  bug_reporting.md
debug/: 20251004_222529_run.json  20251117_180158_run.json  20251117_180245_run.json  20251117_182441_run.json
demo/: pipeline.yaml
demo1/: flujo.toml
demo2/: flujo.toml  pipeline.yaml
docs/: FLUJO_BUG_HUNTING_PLAN.md  FLUJO_BUG_HUNTING_RESULTS.md  FLUJO_BUG_HUNTING_SUMMARY.md  FLUJO_IMPROVEMENTS.md  FSD-09_IMPLEMENTATION_RESULTS.md  FSD-11_IMPLEMENTATION_RESULTS.md  FSD-12_IMPLEMENTATION_RESULTS.md  FSD_v1.md  README.md  SQLITE_BACKEND_REFACTORING_STRATEGY.md  SQLITE_OPTIMIZATION_SUMMARY.md  TRACEABILITY_IMPROVEMENTS_IMPLEMENTATION.md  TRACE_STORAGE_ARCHITECTURE.md  The_flujo_way.md  acceptance_demo.md  adapter_allowlist.md  agent_infrastructure.md  api_reference.md  architect_flow_first_principles.md  architecture.md  blueprints.md  cli.md  concepts.md  configuration.md  configuration_management.md  context_strict_mode.md  contributing.md  conversation_history.md  conversational_loops.md  cost_tracking_guide.md  creating_yaml.md  creating_yaml_best_practices.md  custom_state_backend.md  dev.md  documentation_guide.md  documentation_status.md  durable_workflows.md  executor_core_optimization_guide.md  executor_core_performance_improvements.md  expression_language.md  (+33 more)
examples/: 00_quickstart.py  00_quickstart_backup.py  01_weighted_scoring.py  02_custom_agents.py  03_reward_scorer.py  04_batch_processing.py  05_pipeline_sql.py  06_typed_context.py  07_loop_step.py  08_branch_step.py  09_human_in_the_loop.py  09_pipeline_factories.py  10_cli_run_demo.py  10_cost_control.py  11_stateful_hitl.py  12_enhanced_loop_mappers_demo.py  12_using_resources.py  14_pipeline_composition.py  15_agentic_loop_migration.py  16_pipeline_visualization_and_testing.py  17_parallel_step_enhancements.py  19_telemetry.py  20_async_map.py  README.md  README_externalized_prompts.md  admin_queries_demo.py  architect_pipeline.yaml  architect_pipeline_state_machine.yaml  consensus_diff_autofix_demo.py  context_helpers_demo.yaml  context_helpers_demo_README.md  cost_tracking_demo.py  custom_type_resolution_demo.py  durable_workflow.py  extensibility_demo.py  flujo.toml  fsd_12_tracing_demo.py  golden_pipeline.py  governance_policy.py  hitl_sink_demo.md  (+13 more)
flujo/: __init__.py  builtins.py  builtins_architect.py  builtins_context.py  builtins_core.py  builtins_extras.py  builtins_extras_transforms.py  builtins_optional.py  builtins_support.py  cost.py  deprecation.py  exceptions.py  registry.py  signature_tools.py  tracing.py  validation.py
legacy_examples/: 09_human_in_the_loop.py  10_cost_control.py  13_lifecycle_hooks.py  14_pipeline_composition.py  15_agentic_loop_migration.py  18_error_recovery.py  19_telemetry.py  README.md
lessons_learned/: clarification_pipelines.md
manual_testing/: README.md  STRUCTURE.md  __init__.py  cohort_definition_pipeline.py  cohort_pipeline.py  comprehensive_test.py  developer_experience.md  flujo.toml  main.py  plan.txt  run_tests.py  test_bug_demonstration.py  test_config.py
output/: last_improve_error.txt  last_pipeline_debug.txt  last_pipeline_load_error.txt  last_run_error.txt  trace_improve.txt
prof/: combined.prof  executor_core_execute_baseline.prof  executor_core_execute_baseline_stats.txt  executor_core_execute_fastpath.prof  executor_core_execute_fastpath_stats.txt  executor_core_execute_no_cache.prof  executor_core_execute_no_cache_fastpath.prof  executor_core_execute_no_cache_fastpath_optimized.prof  executor_core_execute_no_cache_fastpath_optimized_stats.txt  executor_core_execute_no_cache_fastpath_stats.txt  executor_core_execute_no_cache_optimized.prof  executor_core_execute_no_cache_optimized_stats.txt  executor_core_execute_no_cache_stats.txt  executor_core_execute_optimized.prof  executor_core_execute_optimized_stats.txt  test_base_validator_initialization.prof  test_circular_reference_in_ci.prof  test_concurrent_access_safety.prof  test_error_handling_robustness.prof  test_graceful_degradation.prof  test_low_memory_serialization.prof  test_memory_efficient_serialization.prof  (+6 more)
scripts/: test_guide.md  (+23 more)
(+1263 files in other folders)
