[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# --------------------------------------------------------------------------- #
# Core project metadata (PEP 621)
# --------------------------------------------------------------------------- #
[project]
name            = "flujo"
version         = "0.4.34" # Enhanced documentation and bug fixes
description     = "Production-ready orchestration for AI agents, built with Pydantic."
readme          = "README.md"
requires-python = ">=3.11,<4.0"

authors = [
  { name = "Alvaro", email = "aandresalvarez@gmail.com" }
]

license = { text = "AGPL-3.0" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]

# Runtime dependencies
dependencies = [
  "pydantic>=2.11.7,<2.13", # Allow patch updates and minor upgrades within v2, ensures TypeAdapter and v2 features
  "pydantic-ai>=0.4.2",
  "pydantic-settings",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic-evals>=0.0.47", # Added for Intelligent Evals
  "aiosqlite>=0.21.0",
]

# Optional dependency groups (install with: `pip install .[dev]`, etc.)
[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-xdist",  # Added for parallel test execution
  "hypothesis",
  "vcrpy",
  "build",     # Added for package building
  "twine",     # Added for package uploading
  "pytest-benchmark>=4.0.0",
  "bandit>=1.7.5",
  "cyclonedx-python-lib>=5.2.0,<9",
  "cyclonedx-py",  # Added for CycloneDX CLI support
  "logfire>=0.3",
  "sqlvalidator>=0.0.8",
  "psutil>=5.9.0",  # Added for performance and memory tests
  "prometheus-client>=0.22.1,<0.23.0",  # Required for prometheus tests
  "httpx",  # Required for prometheus integration tests
]
docs = [
    "mkdocs",
    "mkdocs-material", # Added for a professional theme
    "mkdocstrings[python]",
]
opentelemetry = ["opentelemetry-sdk>=1.26"]
lens = [
  "opentelemetry-sdk>=1.20,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
  "prometheus-client>=0.22.1,<0.23.0",
]
bench = [
    "numpy",
    "pytest-benchmark>=4.0.0",
]
logfire = ["logfire>=0.3"]
sql = ["sqlvalidator>=0.0.8"]

# Prometheus-related dependencies (install with: `pip install .[prometheus]`)
prometheus = [
    "prometheus-client>=0.22.1,<0.23.0"
]

# CLI entry point (install adds `flujo` command to PATH)
[project.scripts]
flujo = "flujo.cli.main:app"

# Project links (PEP 621)
[project.urls]
Homepage = "https://github.com/aandresalvarez/flujo"
Repository = "https://github.com/aandresalvarez/flujo"
Documentation = "https://aandresalvarez.github.io/flujo/"
Bug_Tracker = "https://github.com/aandresalvarez/flujo/issues"
Changelog = "https://github.com/aandresalvarez/flujo/blob/main/CHANGELOG.md"

# --------------------------------------------------------------------------- #
# Tool-specific configuration
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict         = true

# Focus type checking on the core library first. Examples are excluded as they are
# meant to be educational and may not follow strict typing.
exclude = [
    "examples/.*",
    "flujo/telemetry/prometheus.py",
]

# Allow third-party libraries that do not ship type information.
[[tool.mypy.overrides]]
module = [
    "pydantic_ai",
    "pydantic_evals",
    "tenacity",
    "yaml",
    "sqlvalidator",
    "vcr",
    "logfire",
    "numpy",
    "orjson",
    "blake3"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "opentelemetry",
    "opentelemetry.sdk",
    "opentelemetry.exporter.otlp.proto.http.trace_exporter",
    "prometheus_client",
    "prometheus_client.core",
    "prometheus_client.registry",
]
ignore_missing_imports = true

# Known mypy limitation with async wrapper patterns in step_logic
[[tool.mypy.overrides]]
module = "flujo.application.core.step_logic"
disable_error_code = ["no-any-return"]

# Known mypy limitation with orjson and dynamic serialization in ultra_executor
[[tool.mypy.overrides]]
module = "flujo.application.core.ultra_executor"
disable_error_code = ["no-any-return"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "e2e: marks tests as end-to-end (requires network access or VCR cassettes)",
  "benchmark: marks tests as benchmarks (requires pytest-benchmark)",
  "asyncio: marks tests as async (handled by pytest-asyncio)",
  "serial: marks tests that must run serially to avoid concurrency issues",
  "slow: marks tests that are slow and should be run separately",
  "fast: marks tests that are fast and can be run in parallel",
]
filterwarnings = [
  "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning"
]
# Parallel testing configuration
addopts = [
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
# Performance optimization: disable output capture for faster execution
# addopts = ["--no-cov", "--tb=short"]  # Uncomment for maximum speed

# --------------------------------------------------------------------------- #
# Build system configuration
# --------------------------------------------------------------------------- #
[tool.hatch.build.targets.wheel]
packages = ["flujo"]
include = ["flujo/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "flujo",
    "tests",
    "docs",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]


[tool.hatch.build.targets.wheel.shared-data]
"README.md" = "share/doc/flujo/README.md"
"LICENSE" = "share/doc/flujo/LICENSE"
"CHANGELOG.md" = "share/doc/flujo/CHANGELOG.md"

# Note: This project uses uv for dependency management and development workflow.
# The Makefile provides convenient commands that use uv under the hood.
# For local development, use: make install, make test, make all, etc.

# Suppress LogfireNotConfiguredWarning for users who do not enable Logfire
[tool.logfire]
ignore_no_config = true
