[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# --------------------------------------------------------------------------- #
# Core project metadata (PEP 621)
# --------------------------------------------------------------------------- #
[project]
name = "flujo"
version = "0.4.37"  # Project-based CLI journey (FSD-021)
description = "A modern, type-safe framework for building AI-powered applications with structured outputs and robust error handling."
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
keywords = ["ai", "llm", "pipeline", "workflow", "agent", "async", "type-safe"]
authors = [
    {name = "Alvaro Andres Alvarez", email = "aandresalvarez@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11.7,<2.13",
    "pydantic-ai>=0.7.0,<0.7.3",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
    "typer>=0.16.1",
    "rich>=13.0.0",
    "pydantic-evals>=0.4.7",
    "uvloop>=0.19.0; sys_platform != 'win32'", # Performance optimization for Unix systems
    "orjson>=3.9.0", # Faster JSON serialization
    "blake3>=0.4.0", # Faster cryptographic hashing
    "numpy>=1.20.0",
    "PyYAML>=6.0",
]
# Optional dependency groups (install with: `pip install .[dev]`, etc.)
[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-xdist",  # Added for parallel test execution
  "pytest-timeout",  # Hard kill hanging tests
  "pytest-forked",  # Run each test in fresh process
  "pytest-randomly",  # Randomize test order
  "pytest-rerunfailures",  # Auto-rerun flakes
  "pytest-testmon",  # Run only changed tests
  "pytest-picked",  # Alternative to testmon
  "pytest-split",  # Deterministic sharding for CI
  "pytest-deadfixtures",  # Find unused fixtures
  "pytest-profiling",  # Profile hot spots
  "hypothesis",
  "vcrpy",
  "build",     # Added for package building
  "twine",     # Added for package uploading
  "pytest-benchmark>=4.0.0",
  "bandit>=1.7.5",
  "cyclonedx-python-lib>=5.2.0,<9",
  "cyclonedx-py",  # Added for CycloneDX CLI support
  "logfire>=4.0.0", # Updated for compatibility with pydantic-graph 0.4.7
  "sqlvalidator>=0.0.8",
  "psutil>=5.9.0",  # Added for performance and memory tests
  "types-psutil>=7.0.0.20250801",
  "prometheus-client>=0.22.1,<0.23.0",  # Required for prometheus tests
  "httpx",  # Required for prometheus integration tests
]
skills = [
  "ddgs",
  "httpx",
  "aiofiles",
  "pyfiglet",
]
docs = [
    "mkdocs",
    "mkdocs-material", # Added for a professional theme
    "mkdocstrings[python]",
    "mkdocs-redirects",
]
opentelemetry = ["opentelemetry-sdk>=1.26", "opentelemetry-exporter-otlp-proto-http>=1.26"]
lens = [
  "opentelemetry-sdk>=1.20,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
  "prometheus-client>=0.22.1,<0.23.0",
]
bench = [
    "pytest-benchmark>=4.0.0",
    "numpy>=1.20.0",
]
logfire = ["logfire>=4.0.0"] # Updated for compatibility with pydantic-graph 0.4.7
sql = ["sqlvalidator>=0.0.8"]
templating = ["Jinja2>=3.1"]
yaml_tools = ["ruamel.yaml>=0.18"]

# Prometheus-related dependencies (install with: `pip install .[prometheus]`)
prometheus = [
    "prometheus-client>=0.22.1,<0.23.0"
]

# CLI entry point (install adds `flujo` command to PATH)
[project.scripts]
flujo = "flujo.cli.main:app"

# Project links (PEP 621)
[project.urls]
Homepage = "https://github.com/aandresalvarez/flujo"
Repository = "https://github.com/aandresalvarez/flujo"
Documentation = "https://aandresalvarez.github.io/flujo/"
Bug_Tracker = "https://github.com/aandresalvarez/flujo/issues"
Changelog = "https://github.com/aandresalvarez/flujo/blob/main/CHANGELOG.md"

# --------------------------------------------------------------------------- #
# Tool-specific configuration
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict         = true
plugins = ["pydantic.mypy"]

# Focus type checking on the core library first. Examples are excluded as they are
# meant to be educational and may not follow strict typing.
exclude = [
    "examples/.*",
    "flujo/telemetry/prometheus.py",
    ".*/site-packages/",
]

# Allow third-party libraries that do not ship type information.
[[tool.mypy.overrides]]
module = [
    "pydantic_ai.*",
    "pydantic_evals",
    "tenacity",
    "yaml",
    "duckduckgo_search",
    "ddgs",
    "tomli",
    "sqlvalidator",
    "vcr",
    "logfire",
    "numpy",
    "orjson",
    "blake3",
    "xxhash",
    "opentelemetry.sdk.trace",
    "opentelemetry.sdk.trace.export"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aiosqlite",
    "aiofiles",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "opentelemetry",
    "opentelemetry.sdk",
    "opentelemetry.exporter.otlp.proto.http.trace_exporter",
    "prometheus_client",
    "prometheus_client.core",
    "prometheus_client.registry",
]
ignore_missing_imports = true

# Exclude external libraries with known mypy issues
[[tool.mypy.overrides]]
module = [
    "pydantic_ai.*",
]
ignore_errors = true

# Known mypy limitation with async wrapper patterns in step_logic
[[tool.mypy.overrides]]
module = "flujo.application.core.step_logic"
disable_error_code = ["no-any-return"]


# Coverage configuration to make reports robust across environments
[tool.coverage.run]
source = ["flujo"]
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.paths]
source = [
  "flujo",
  "*/work/flujo/flujo/flujo",
  "*/Documents/Code/flujo/flujo",
]


# Relax mypy on complex, dynamically-typed policy and executor modules
[[tool.mypy.overrides]]
module = [
  "flujo.application.core.step_policies",
  "flujo.application.core.execution_manager",
  "flujo.application.core.step_executor",
  "flujo.domain.dsl.step",
]
disable_error_code = [
  "no-any-return",
  "union-attr",
  "attr-defined",
  "arg-type",
  "call-arg",
  "type-arg",
  "misc",
  "assignment",
]

[[tool.mypy.overrides]]
module = [
  "flujo.domain.validation",
]
disable_error_code = [
  "misc",
]

[[tool.mypy.overrides]]
module = [
  "flujo.application.core.ultra_executor",
]
disable_error_code = [
  "no-any-return",
  "no-untyped-def",
  "no-untyped-call",
  "call-arg",
  "arg-type",
  "type-arg",
  "attr-defined",
  "redundant-cast",
  "misc",
  "assignment",
  "type-var",
]

[[tool.mypy.overrides]]
module = [
  "flujo.infra.settings",
]
disable_error_code = [
  "no-any-return",
]

[[tool.mypy.overrides]]
module = [
  "flujo.application.core.loop_executor",
  "flujo.plugins.sql_validator",
  "flujo.application.runner",
  "flujo.application.core.optimization.performance.algorithms",
  "flujo.application.core.algorithm_optimizations",
]
disable_error_code = [
  "no-untyped-def",
  "no-any-return",
  "union-attr",
  "assignment",
  "redundant-cast",
  "attr-defined",
]

[[tool.mypy.overrides]]
module = [
  "flujo.domain.blueprint.loader",
  "flujo.domain.blueprint.model_generator",
]
disable_error_code = [
  "no-any-return",
  "valid-type",
  "arg-type",
  "attr-defined",
  "misc",
  "no-untyped-def",
]

[[tool.mypy.overrides]]
module = [
  "flujo.state.backends.sqlite",
]
disable_error_code = [
  "misc",
]

[[tool.mypy.overrides]]
module = [
  "flujo.cli.helpers",
  "flujo.cli.main",
]
disable_error_code = [
  "no-untyped-call",
  "no-any-return",
]

[[tool.mypy.overrides]]
module = [
  "flujo.telemetry.prometheus",
]
disable_error_code = [
  "arg-type",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
per-file-ignores = { "tests/benchmarks/*.py" = ["E402"], "tests/unit/test_extract.py" = ["E402"] }


[tool.pytest.ini_options]
# Note: asyncio_mode is deprecated in pytest 8+, using pytest-asyncio auto mode
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
  "bug_reports",
  "manual_testing",
  "scripts",
  "dist",
  "build",
  "output",
  ".venv",
  "venv",
  ".git",
]
markers = [
  "e2e: marks tests as end-to-end (requires network access or VCR cassettes)",
  "benchmark: marks tests as benchmarks (requires pytest-benchmark)",
  "asyncio: marks tests as async (handled by pytest-asyncio)",
  "serial: marks tests that must run serially to avoid concurrency issues",
  "slow: marks tests that are slow and should be run separately",
  "veryslow: marks extremely slow tests that must never run in fast suites",
  "ultra_slow: marks ultra-long stress tests; excluded from fast suites",
  "fast: marks tests that are fast and can be run in parallel",
  "integration: marks integration tests for subsystems like the Architect",
  "no_collect: marks classes that should not be collected as test classes",
  "stress: marks stress/resource tests",
  "memory: marks memory-focused tests",
  "timeout: marks tests with custom timeout (override global)",
  "hypothesis: marks property-based tests (requires hypothesis)",
]
filterwarnings = [
  "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning"
]
# Global test execution guardrails (safe options that don't require plugins)
addopts = [
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "-ra",  # Show xfailed/xpassed/skip reasons
  "--durations=25",  # List top 25 slowest tests
  "--durations-min=0.5",  # Only report if slower than 0.5s
  "-q",  # Quiet by default; Makefile can override with -v
]
# Note: timeout and faulthandler options are set per-target in Makefile
# to ensure proper plugin loading
# Performance optimization: disable output capture for faster execution
# addopts = ["--no-cov", "--tb=short"]  # Uncomment for maximum speed

# Force pytest-asyncio plugin loading for all test runs
required_plugins = ["pytest-asyncio"]

# --------------------------------------------------------------------------- #
# Build system configuration
# --------------------------------------------------------------------------- #
[tool.hatch.build.targets.wheel]
packages = ["flujo"]
include = [
    "flujo/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "flujo",
    "tests",
    "docs",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]


[tool.hatch.build.targets.wheel.shared-data]
"README.md" = "share/doc/flujo/README.md"
"LICENSE" = "share/doc/flujo/LICENSE"
"CHANGELOG.md" = "share/doc/flujo/CHANGELOG.md"

# Note: This project uses uv for dependency management and development workflow.
# The Makefile provides convenient commands that use uv under the hood.
# For local development, use: make install, make test, make all, etc.

# Suppress LogfireNotConfiguredWarning for users who do not enable Logfire
[tool.logfire]
ignore_no_config = true

[dependency-groups]
dev = [
    "types-psutil>=7.0.0.20250801",
]
